src/app/components/home/home.component.css
main {
  width: 100vw;
  max-width: 1200px;
  margin: auto;
  padding: 0 20px;
}

.main-con {
  border-top: 1px solid #f2f2f2;
  padding: 20px 0;
  display: grid;
  grid-gap: 1rem;
  grid-template-columns: repeat(auto-fit, minmax(12rem, 1fr));
}

.container {
  display: inline-block;
  word-wrap: normal;
  background-color: #f2f2f2;
  border-radius: 5px;
  overflow: hidden;
  transition: .2s;
}

.vid-con:hover {
  transform: translateY(-3px);
  box-shadow: 2px 3px 10px #0000003b;
  transition: .2s;
}

a {
  text-decoration: none;
  color: #000;
}

.img {
  width: 100%;
  height: 150px;
}

.img img {
  width: 100%;
  height: 100%;
  object-fit: cover;
}

.info {
  padding: 10px;
}

p {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
}

.title {
  font-weight: 600;
  font-size: 15px;
}

.channel-title {
  font-size: 12px;
  color: #4f4f4f;
  font-weight: 400;
  margin: 5px 0;
}

.date {
  font-size: 12px;
  color: #4f4f4f;
  font-weight: 400;
}

